@@ -1,10 +1,0 @@
-<svn_revision>
-<text_version>
-Origine: svn://zone.spip.org/spip-zone/_plugins_/download_dump
-Revision: 31271
-Dernier commit: 2009-05-31 02:26:55 +0200 
-</text_version>
-<origine>svn://zone.spip.org/spip-zone/_plugins_/download_dump</origine>
-<revision>31271</revision>
-<commit>2009-05-31 02:26:55 +0200 </commit>
-</svn_revision>
